# kNN-Index

./: CMakeLists.txt  README.md  ch  dynamic_graph.h  flatten_hash_map.h  index_bng.cpp  predata.cpp  query_up.cpp
data/: NY.de  NY.object.txt  insertedObjects.txt
data/NY/: NY.de  query.txt
